style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    box-sizing: border-box;
}

/* navbar -->> */

.navbar {
    padding: 18px;
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid rgb(180, 180, 180);
    background-color: rgba(255, 255, 255, 0.651);
}

#generateBtn {
    border: none;
    border-radius: 7px;
    padding: 10px 30px;
    font-size: medium;
    background-color: rgb(55, 130, 165);
    color: white;
    font-weight: bold;
}

#generateBtn:hover {
    background-color: rgb(77, 151, 185);
}

#generateBtn:active {
    background-color: rgb(97, 179, 218);
}


/* color pallete -->> */

.wrapper {
    display: flex;
    height: 100dvh;
}

.color {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1 1 0;
}


/* color name container -->> */

.colornameContainer {
    display: flex;
    gap: 8px;
    padding: 8px;
    background-color: aliceblue;
    border-radius: 3px;
}


.copyIcon {
    height: 18px;
    width: 18px;
}

.copyIcon:active {
    scale: 0.9;
}

